K8-AKS-Deployment-Scripts-Ingress-Sample/deployment-config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-cloud-config-server
  name: spring-cloud-config-server
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: spring-cloud-config-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-cloud-config-server
    spec:
      containers:
      - image: sreyasvpariyath/k8-sboot-config-server-test:latest #CHANGE
        imagePullPolicy: IfNotPresent
        name: spring-cloud-config-server
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: spring-cloud-config-server
  name: spring-cloud-config-server
  namespace: default
spec:
  ports:
  - # nodePort: 30701 
    port: 8888 
    protocol: TCP
    targetPort: 8888 
  selector:
    app: spring-cloud-config-server
  sessionAffinity: None 
  type: ClusterIP
