K8-AKS-Deployment-Scripts-Ingress-Sample/deployment-restapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8-sboot-restapi-test
  name: k8-sboot-restapi-test
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: k8-sboot-restapi-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8-sboot-restapi-test
    spec:
      containers:
      - image: sreyasvpariyath/k8-sboot-restapi-test:latest #CHANGE
        imagePullPolicy: IfNotPresent
        name: k8-sboot-restapi-test
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: k8-sboot-restapi-test
  name: k8-sboot-restapi-test
  namespace: default
spec:
  ports:
  - # nodePort: 30701 
    port: 8080 
    protocol: TCP
    targetPort: 8080 
  selector:
    app: k8-sboot-restapi-test
  sessionAffinity: None 
  type: ClusterIP
