K8-AKS-Deployment-Scripts-Ingress-Sample/ingress_azure_final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /k8-sboot-restapi-test/(.*)
        pathType: Prefix
        backend:
          service:
            name: k8-sboot-restapi-test
            port:
              number: 8080
      - path: /k8-sboot-graphql-test/(.*)
        pathType: Prefix
        backend:
          service:
            name: k8-sboot-graphql-test
            port:
              number: 8081
      - path: /spring-cloud-config-server/(.*)
        pathType: Prefix
        backend:
          service:
            name: spring-cloud-config-server
            port:
              number: 8888
